Change request body type of all PUT and POST methods to list
